# Microservicio

./: README.md  info.txt  main.py  pyproject.toml  requeriments.txt
app/src/application/: preprocessing_service.py  sentiment_analysis_service.py
app/src/domain/: models.py
app/src/infrastructure/: hugging_face.py
app/src/interfaces/: main.py
