[tool.poetry]
name = "microservicio"
version = "0.1.0"
description = ""
authors = ["alxxr <alexx47724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
transformers = "^4.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
